fix: Add max-width to photo for printing
Fixes photo overlapping QR-code

--- a/css/print.css
+++ b/css/print.css
@@ -14,6 +14,7 @@
 
   curriculum-vita-about-me section[name='application-photo'] img {
     max-height: 100%;
+    max-width: 100%;
   }
 
   a {
